--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="comicPriceDisplay">Preço: U$%1$.2f</string>
+    <string name="noComicMessage">Nenhuma HQ encontrada</string>
 </resources>
